force-app/main/default/objects/OpportunityLineItem/fields/Alternate_Heading__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Heading__c</fullName>
    <label>Alternate Heading</label>
    <length>80</length>
    <type>Text</type>
</CustomField>