force-app/main/default/objects/OpportunityLineItem/fields/Display_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Price</label>
    <type>Checkbox</type>
</CustomField>