force-app/main/default/objects/OpportunityLineItem/fields/Experlogix_Category__c.field-meta.xml
<CustomField>
    <fullName>Experlogix_Category__c</fullName>
    <label>Experlogix Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>