force-app/main/default/objects/OpportunityLineItem/fields/experlogix_category_sequence_no__c.field-meta.xml
<CustomField>
    <fullName>experlogix_category_sequence_no__c</fullName>
    <label>Experlogix Category Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>