force-app/main/default/objects/OpportunityLineItem/fields/Experlogix_Description__c.field-meta.xml
<CustomField>
    <fullName>Experlogix_Description__c</fullName>
    <description>Field used to map the product description to from Experlogix</description>
    <label>Experlogix Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>