force-app/main/default/objects/OpportunityLineItem/fields/Implementation_Team__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Team__c</fullName>
    <description>Refers to the Implementation Team field on the product.  Used in process to create work items and assign to correct team upon closed/won opportunity</description>
    <formula>TEXT(PricebookEntry.Product2.Implementation_Team__c)</formula>
    <label>Implementation Team</label>
    <type>Text</type>
</CustomField>