force-app/main/default/objects/OpportunityLineItem/fields/NestedLineNumber__c.field-meta.xml
<CustomField>
    <fullName>NestedLineNumber__c</fullName>
    <description>Experlogix Nested Config Number</description>
    <label>Experlogix Nested Config Number</label>
    <type>TextArea</type>
</CustomField>