force-app/main/default/objects/OpportunityLineItem/fields/Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference__c</fullName>
    <formula>IF( TEXT(ListPrice)== TEXT(UnitPrice),&quot;&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Difference</label>
    <type>Text</type>
</CustomField>