force-app/main/default/objects/OpportunityLineItem/fields/Product_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Display__c</fullName>
    <label>Product Display</label>
    <length>80</length>
    <type>Text</type>
</CustomField>