force-app/main/default/objects/OpportunityLineItem/fields/quotenote__c.field-meta.xml
<CustomField>
    <fullName>quotenote__c</fullName>
    <label>Quote Note</label>
    <length>80</length>
    <type>Text</type>
</CustomField>