force-app/main/default/objects/OpportunityLineItem/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Experlogix Record ID</description>
    <label>Experlogix Record ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>