force-app/main/default/objects/OpportunityLineItem/validationRules/Amount_Greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Greater_than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Profile.Name  = &quot;GSS Sales - ANZ/UK&quot;, UnitPrice = 0)</errorConditionFormula>
    <errorMessage>The amount of a product cannot be equal to 0</errorMessage>
</ValidationRule>